--- a/src/index.html
+++ b/src/index.html
@@ -402,7 +402,7 @@
                 dots: true,
                 autoplay: true,
                 autoplaySpeed: 2000,
-                infinite: false,
+                infinite: true,
                 // centerMode: true,
                 responsive: [
                     {
